--- a/MonopHelper/Pages/Version.cshtml
+++ b/MonopHelper/Pages/Version.cshtml
@@ -14,6 +14,49 @@
             <h3>1.3 Builds</h3>
             <div class="h-line"></div>
 
+            <h4>Version: 1.3.7</h4>
+            <div class="list mb">
+                <ul class="list-group list-group-flush">
+                    <li class="list-group-item">
+                        Added new card actions.
+                    </li>
+                    <li class="list-group-item">
+                        All cards have the choice to be kept and played based on a condition.
+                    </li>
+                    <li class="list-group-item">
+                        Possible play conditions are none (play anytime), paying rent, paying tax, visiting GO, visiting Jail, visiting Free Parking, rolling a double, or rolling a triple.
+                    </li>
+                    <li class="list-group-item">
+                        There are 7 possible action types, these are: move, pay, property, dice, reset, take card, and event.
+                    </li>
+                    <li class="list-group-item">
+                        Move actions can be setup for moving a player a number of spaces or advancing to a specific space. It can be setup for forwards or backwards, and for the current player or all players.
+                    </li>
+                    <li class="list-group-item">
+                        Pay actions involve paying or receiving money. This can involve the bank, free parking, or a player. If choosing a player, it can be a specific player, left, right, or all players. Payments/Receive can be based on a multiplier such as houses or hotels.
+                    </li>
+                    <li class="list-group-item">
+                        Property actions allow properties to be taken or handed back to the bank, free parking, or a player. It can either involve a full set or a single property, and can be a swap (two-way).
+                    </li>
+                    <li class="list-group-item">
+                        Dice actions allow a player's roll to be converted to a double or a triple.
+                    </li>
+                    <li class="list-group-item">
+                        Reset actions can reset a player's jail cost, triple bonus, or properties handed into free parking. It can also be setup for purging a number of properties or sets.
+                    </li>
+                    <li class="list-group-item">
+                        Take card actions will force the player to take a card from each defined card type.
+                    </li>
+                    <li class="list-group-item">
+                        Event actions cause an event to occur: extra turns, miss turns, mortgage properties, jail space, tax spaces, stations, utilities, free parking space, and the GO space.
+                        Every event has an end condition: number of turns, rolling a double, rolling a triple, going to jail. There is also a default end condition which occurs when the selected player lands on the space defined in the event.
+                    </li>
+                    <li class="list-group-item">
+                        Actions are split into groups (choices). Each group can have multiple actions of any defined above.
+                    </li>
+                </ul>
+            </div>
+
             <h4>Version: 1.3.6</h4>
             <div class="list mb">
                 <ul class="list-group list-group-flush">
