--- a/MonopHelper/Pages/Cards/Actions/Edit.cshtml
+++ b/MonopHelper/Pages/Cards/Actions/Edit.cshtml
@@ -2,6 +2,7 @@
 @using Microsoft.AspNetCore.Mvc.TagHelpers
 @using MonopolyCL.Extensions
 @using MonopolyCL.Models.Cards.CardActions
+@using MonopolyCL.Models.Cards.CardActions.EventActions
 @model MonopHelper.Pages.Cards.Actions.Edit
 
 @{
@@ -25,49 +26,49 @@
                 <div class="row">
                     <div class="col-sm-7">
                         <partial name="Cards/Actions/_CardInfo" model="Model.Card"/>
-                        <form method="post">
-                            <input type="hidden" asp-for="Move.ActionId"/>
-                            <input type="hidden" asp-for="Move.Group"/>
-                            <div class="mb-3 form-check form-switch">
-                                @if (Model.Move.IsAdvance)
-                                {
-                                    <input asp-for="Move.IsAdvance" id="is-advance" class="form-check-input" onchange="SetInputLabel('move-val', 'Spaces', 'Board Index')" checked/>
-                                }
-                                else
-                                {
-                                    <input asp-for="Move.IsAdvance" id="is-advance" class="form-check-input" onchange="SetInputLabel('move-val', 'Spaces', 'Board Index')"/>
-                                }
-                                <label class="form-check-label" for="is-advance" asp-for="Move.IsAdvance"></label>
-                            </div>
-                            <div class="mb-3">
-                                <label id="move-val">@(Model.Move.IsAdvance ? "Board Index" : "Spaces")</label>
-                                <input asp-for="Move.Value" class="form-control"/>
-                                <span asp-validation-for="Move.Value" class="text-danger"></span>
-                            </div>
-                            <div class="mb-3 form-check form-switch">
-                                @if (Model.Move.IsForward)
-                                {
-                                    <input asp-for="Move.IsForward" id="is-forward" class="form-check-input" checked/>
-                                }
-                                else
-                                {
-                                    <input asp-for="Move.IsForward" id="is-forward" class="form-check-input"/>
-                                }
-                                <label class="form-check-label" for="is-forward" asp-for="Move.IsForward"></label>
-                            </div>
-                            <div class="mb-3 form-check form-switch">
-                                @if (Model.Move.IsAllPlayers)
-                                {
-                                    <input asp-for="Move.IsAllPlayers" id="is-allplayers" class="form-check-input" checked/>
-                                }
-                                else
-                                {
-                                    <input asp-for="Move.IsAllPlayers" id="is-allplayers" class="form-check-input"/>
-                                }
-                                <label class="form-check-label" for="is-allplayers" asp-for="Move.IsAllPlayers"></label>
-                            </div>
-                            <button class="btn btn-success">@(Model.AddingAction ? "Add" : "Modify") Action</button>
-                        </form>
+                        @* <form method="post"> *@
+                        @*     <input type="hidden" asp-for="Move.ActionId"/> *@
+                        @*     <input type="hidden" asp-for="Move.Group"/> *@
+                        @*     <div class="mb-3 form-check form-switch"> *@
+                        @*         @if (Model.Move.IsAdvance) *@
+                        @*         { *@
+                        @*             <input asp-for="Move.IsAdvance" id="is-advance" class="form-check-input" onchange="SetInputLabel('move-val', 'Spaces', 'Board Index')" checked/> *@
+                        @*         } *@
+                        @*         else *@
+                        @*         { *@
+                        @*             <input asp-for="Move.IsAdvance" id="is-advance" class="form-check-input" onchange="SetInputLabel('move-val', 'Spaces', 'Board Index')"/> *@
+                        @*         } *@
+                        @*         <label class="form-check-label" for="is-advance" asp-for="Move.IsAdvance"></label> *@
+                        @*     </div> *@
+                        @*     <div class="mb-3"> *@
+                        @*         <label id="move-val">@(Model.Move.IsAdvance ? "Board Index" : "Spaces")</label> *@
+                        @*         <input asp-for="Move.Value" class="form-control"/> *@
+                        @*         <span asp-validation-for="Move.Value" class="text-danger"></span> *@
+                        @*     </div> *@
+                        @*     <div class="mb-3 form-check form-switch"> *@
+                        @*         @if (Model.Move.IsForward) *@
+                        @*         { *@
+                        @*             <input asp-for="Move.IsForward" id="is-forward" class="form-check-input" checked/> *@
+                        @*         } *@
+                        @*         else *@
+                        @*         { *@
+                        @*             <input asp-for="Move.IsForward" id="is-forward" class="form-check-input"/> *@
+                        @*         } *@
+                        @*         <label class="form-check-label" for="is-forward" asp-for="Move.IsForward"></label> *@
+                        @*     </div> *@
+                        @*     <div class="mb-3 form-check form-switch"> *@
+                        @*         @if (Model.Move.IsAllPlayers) *@
+                        @*         { *@
+                        @*             <input asp-for="Move.IsAllPlayers" id="is-allplayers" class="form-check-input" checked/> *@
+                        @*         } *@
+                        @*         else *@
+                        @*         { *@
+                        @*             <input asp-for="Move.IsAllPlayers" id="is-allplayers" class="form-check-input"/> *@
+                        @*         } *@
+                        @*         <label class="form-check-label" for="is-allplayers" asp-for="Move.IsAllPlayers"></label> *@
+                        @*     </div> *@
+                        @*     <button class="btn btn-success">@(Model.AddingAction ? "Add" : "Modify") Action</button> *@
+                        @* </form> *@
                     </div>
                     <div class="col-sm-5 p-2">
                         <img src="~/board.png" width="100%" height="100%" alt="Monopoly Board"/>
@@ -225,47 +226,47 @@
                 </form>
                 break;
             case CardActions.EVENT:
-                <form method="post">
-                    <input type="hidden" asp-for="Event.ActionId"/>
-                    <input type="hidden" asp-for="Event.Group"/>
-                    <div class="mb-3">
-                        <label asp-for="Event.EventType"></label>
-                        <select asp-for="Event.EventType" asp-items="Model.Event.GetEventList()" class="form-control" onchange="SetEventLabel(this)"></select>
-                        <span asp-validation-for="Event.EventType"></span>
-                    </div>
-                    <div class="mb-3" hidden="@(Model.Event.EventType != EventType.FREE_PARKING)" id="fp-event">
-                        <label asp-for="Event.FpEvent"></label>
-                        <select asp-for="Event.FpEvent" asp-items="Model.Event.GetFpEventList()" class="form-control"></select>
-                        <span asp-validation-for="Event.FpEvent"></span>
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="Event.Condition"></label>
-                        <select asp-for="Event.Condition" asp-items="Model.Event.GetEventConditionList()" class="form-control"></select>
-                        <span asp-validation-for="Event.Condition"></span>
-                    </div>
-                    <div class="mb-3" id="event-val">
-                        <label asp-for="Event.Value" id="event-val-label"></label>
-                        <input asp-for="Event.Value" class="form-control"/>
-                        <span asp-validation-for="Event.Value"></span>
-                    </div>
-                    <div class="mb-3 form-check form-switch" hidden="@(Model.Event.EventType != EventType.GO)" id="go-event">
-                        @if (Model.Event.IsPayOnGo)
-                        {
-                            <input asp-for="Event.IsPayOnGo" id="is-gpay" class="form-check-input" checked/>
-                        }
-                        else
-                        {
-                            <input asp-for="Event.IsPayOnGo" id="is-gpay" class="form-check-input"/>
-                        }
-                        <label class="form-check-label" for="is-gpay" asp-for="Event.IsPayOnGo"></label>
-                    </div>
-                    <div class="mb-3">
-                        <label asp-for="Event.PlayerAction"></label>
-                        <select asp-for="Event.PlayerAction" asp-items="Model.Event.GetPlayerActionList()" class="form-control"></select>
-                        <span asp-validation-for="Event.PlayerAction"></span>
-                    </div>
-                    <button class="btn btn-success">@(Model.AddingAction ? "Add" : "Modify") Action</button>
-                </form>
+                @* <form method="post"> *@
+                @*     <input type="hidden" asp-for="Event.ActionId"/> *@
+                @*     <input type="hidden" asp-for="Event.Group"/> *@
+                @*     <div class="mb-3"> *@
+                @*         <label asp-for="Event.EventTypeOld"></label> *@
+                @*         <select asp-for="Event.EventTypeOld" asp-items="Model.Event.GetEventList()" class="form-control" onchange="SetEventLabel(this)"></select> *@
+                @*         <span asp-validation-for="Event.EventTypeOld"></span> *@
+                @*     </div> *@
+                @*     <div class="mb-3" hidden="@(Model.Event.EventTypeOld != EventTypeOLD.FREE_PARKING)" id="fp-event"> *@
+                @*         <label asp-for="Event.FpEventOld"></label> *@
+                @*         <select asp-for="Event.FpEventOld" asp-items="Model.Event.GetFpEventList()" class="form-control"></select> *@
+                @*         <span asp-validation-for="Event.FpEventOld"></span> *@
+                @*     </div> *@
+                @*     <div class="mb-3"> *@
+                @*         <label asp-for="Event.Condition"></label> *@
+                @*         <select asp-for="Event.Condition" asp-items="Model.Event.GetEventConditionList()" class="form-control"></select> *@
+                @*         <span asp-validation-for="Event.Condition"></span> *@
+                @*     </div> *@
+                @*     <div class="mb-3" id="event-val"> *@
+                @*         <label asp-for="Event.Value" id="event-val-label"></label> *@
+                @*         <input asp-for="Event.Value" class="form-control"/> *@
+                @*         <span asp-validation-for="Event.Value"></span> *@
+                @*     </div> *@
+                @*     <div class="mb-3 form-check form-switch" hidden="@(Model.Event.EventTypeOld != EventTypeOLD.GO)" id="go-event"> *@
+                @*         @if (Model.Event.IsPayOnGo) *@
+                @*         { *@
+                @*             <input asp-for="Event.IsPayOnGo" id="is-gpay" class="form-check-input" checked/> *@
+                @*         } *@
+                @*         else *@
+                @*         { *@
+                @*             <input asp-for="Event.IsPayOnGo" id="is-gpay" class="form-check-input"/> *@
+                @*         } *@
+                @*         <label class="form-check-label" for="is-gpay" asp-for="Event.IsPayOnGo"></label> *@
+                @*     </div> *@
+                @*     <div class="mb-3"> *@
+                @*         <label asp-for="Event.PlayerAction"></label> *@
+                @*         <select asp-for="Event.PlayerAction" asp-items="Model.Event.GetPlayerActionList()" class="form-control"></select> *@
+                @*         <span asp-validation-for="Event.PlayerAction"></span> *@
+                @*     </div> *@
+                @*     <button class="btn btn-success">@(Model.AddingAction ? "Add" : "Modify") Action</button> *@
+                @* </form> *@
                 break;
             default:
                 <p class="text-danger"><b>An unknown error occurred. Unable to determine the type of card action.</b></p>
